@@ -10,7 +10,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v25.8.20-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2025-08-20 21:33:42, took 00:12:00, with 50 workers, on 844 cases, 0 failed, 0 traces, 2 retries<br/>
+tested: 2025-08-20 22:02:13, took 00:11:53, with 50 workers, on 844 cases, 0 failed, 0 traces, 1 retries<br/>
 jvm: ./rtr.bin, other: udp<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
