@@ -17477,3 +17477,6 @@ qc pass: wireguard over wireguard
 ---------------------------------- 2025-08-20 20:59:50 25.8.20
 no qc pass: wireguard over asymmetric ports
 failed: wireguard over asymmetric ports
+---------------------------------- 2025-08-20 21:35:43 25.8.20
+no failed: wireguard over asymmetric ports
+qc pass: wireguard over asymmetric ports
